--- a/css/styles.css
+++ b/css/styles.css
@@ -165,12 +165,23 @@ p {
   height: 250px;
   background-color: rgba(255, 255, 255, 0.5);
   border-radius: 50%;
+  opacity: 0;
   transition: all 0.3s ease;
 }
 
 .explore-btn:hover::before {
-  width: 300px;
-  height: 300px;
+  animation: blink 0.5s infinite alternate;
+}
+
+@keyframes blink {
+  0% {
+    opacity: 0.3;
+    transform: translate(-50%, -50%) scale(1);
+  }
+  100% {
+    opacity: 0.7;
+    transform: translate(-50%, -50%) scale(1.2);
+  }
 }
 
 /* Animasi masuk (dari kecil ke ukuran normal) */
